--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Javascript Refresher</title>
 </head>
 <body>
-
+<h1 id="head"></h1>
     <script src="variables.js"></script>
     <script src="datatypes.js"></script>
     <script src="conditionalStatement-Loops.js"></script>
